--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -21,7 +21,7 @@
 		<f:facet name="options">
 			<p:commandButton
 				value="Logout"
-				icon="ui-icon-extlink" action="#{usuarioController.logout}"/>
+				icon="ui-icon-extlink" action="#{loginController.logout}"/>
 		</f:facet>
 	</p:menubar>
 
