--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -1,27 +1,16 @@
-<html
-	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://primefaces.org/ui">
 
 <h:form>
 
 	<p:menubar>
-		<p:menuitem
-			value="Home"
-			icon="ui-icon-home" url="home.xhtml"/>
-		<p:menuitem
-			value="Tela"
-			icon="ui-icon-document" url="tela.xhtml"/> 
-		<p:menuitem
-			value="Usuario"
-			icon="ui-icon-document" url="usuario.xhtml" rendered="#{loginController.usuarioAutenticado.tipo == loginController.tipos[0]}"/>
+		<p:menuitem value="Home" icon="fa fa-fw fa-home" url="home.xhtml" />
+		<p:menuitem value="Tela" icon="fa fa-fw fa-desktop" url="tela.xhtml" />
+		<p:menuitem value="Usuario" icon="fa fa-fw fa-user" url="usuario.xhtml"
+			rendered="#{loginController.usuarioAutenticado.tipo == loginController.tipos[0]}" />
 
 		<f:facet name="options">
-			<p:commandButton
-				value="Logout"
-				icon="ui-icon-extlink" action="#{loginController.logout}"/>
+			<p:commandButton value="Logout" icon="ui-icon-extlink" action="#{loginController.logout}" />
 		</f:facet>
 	</p:menubar>
 
