Mudança no visual

--- a/src/main/webapp/template/layoutBase.xhtml
+++ b/src/main/webapp/template/layoutBase.xhtml
@@ -10,16 +10,16 @@
 </h:head>
 
 <h:body>
-	<div id="header">
+		<div id="header">
 		<ui:include src="header.xhtml" />
 	</div>
 
-	<div id="content" style="margin: 50px 10px">
+	<div id="content" style="margin: 10px 10px">
 		<ui:insert name="content" />
 	</div>
 
-	<div id="footer">
+	<!-- <div id="footer">
 		<ui:include src="footer.xhtml" />
-	</div>
+	</div> -->
 </h:body>
 </html>
