Incluido possibilidade de controlar diferentes tvs

--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -5,7 +5,7 @@
 
 	<p:menubar>
 		<p:menuitem value="Home" icon="fa fa-fw fa-home" url="home.xhtml" />
-		<p:menuitem value="Tela" icon="fa fa-fw fa-desktop" url="tela.xhtml" />
+		<p:menuitem value="TV" icon="fa fa-fw fa-desktop" url="tv.xhtml" />
 		<p:menuitem value="Usuario" icon="fa fa-fw fa-user" url="usuario.xhtml"
 			rendered="#{loginController.usuarioAutenticado.tipo == loginController.tipos[0]}" />
 
