Inicio do Alterar senha

--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -9,9 +9,10 @@
 		<p:menuitem value="Usuario" icon="fa fa-fw fa-user" url="usuario.xhtml"
 			rendered="#{loginController.usuarioAutenticado.tipo == loginController.tipos[0]}" />
 
-		<f:facet name="options">
-			<p:commandButton value="Logout" icon="fa fa-fw fa-sign-out" action="#{loginController.logout}" />
-		</f:facet>
+		<p:submenu icon="fa fa-fw fa-gear" style="float: right">
+			<p:menuitem value="Alterar senha" url="alterarSenha.xhtml" />
+			<p:menuitem value="Sair" action="#{loginController.logout}" />
+		</p:submenu>
 	</p:menubar>
 
 </h:form>
