--- a/src/main/webapp/template/header.xhtml
+++ b/src/main/webapp/template/header.xhtml
@@ -10,8 +10,8 @@
 			rendered="#{loginController.usuarioAutenticado.tipo == loginController.tipos[0]}" />
 
 		<p:submenu icon="fa fa-fw fa-gear" style="float: right">
-			<p:menuitem value="Alterar senha" url="alterarSenha.xhtml" />
-			<p:menuitem value="Sair" action="#{loginController.logout}" />
+			<p:menuitem icon="fa fa-fw fa-pencil" value="Alterar senha" url="alterarSenha.xhtml" />
+			<p:menuitem icon="fa fa-fw fa-sign-out" value="Sair" action="#{loginController.logout}" />
 		</p:submenu>
 	</p:menubar>
 
